# mzip

./: .clang-format  .gitattributes  .gitignore  ALGORITHM.md  BENCHMARKS.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
benchmarks/: run_benchmark.py
cmake/: mzipConfig.cmake.in
include/mzip/: mzip.hpp
src/: archive.cpp  archive.hpp  cli.cpp  codec.cpp  transforms.cpp  transforms.hpp
tests/: test_main.cpp
